gui added volume component, indicator reworked, test_gui_app, minor changes in other folders

--- a/gui/pages/Main/MainPage.kv
+++ b/gui/pages/Main/MainPage.kv
@@ -7,15 +7,23 @@
         size: root.size
         cols: 4
         rows: 1
-        padding: 10, 0
+
         Indicator:
             id: real_force
+            volume_color: 1,1,1,0.8
+            footer_label_text: 'real force'
         Indicator:
             id: exp_force
+            volume_color: 1,0,1,0.8
+            footer_label_text: 'exp force'
         Indicator:
             id: rel_force
+            volume_color: 1,0,0,0.8
+            footer_label_text: 'rel force'
         Indicator:
             id: k_f_scale
+            volume_color: 0,1,1,0.8
+            footer_label_text: 'k f scale'
 
 
 
