--- a/gui/composed_components/Indicator/Indicator.kv
+++ b/gui/composed_components/Indicator/Indicator.kv
@@ -1,4 +1,5 @@
 #: include ./components/LabelWithBorder/LabelWithBorder.kv
+#: include ./components/VolumeLevel/VolumeLevel.kv
 
 <Indicator@BoxLayout>
     size: root.size
@@ -6,6 +7,7 @@
     BoxLayout:
         size_hint: 1, .3
         LabelWithBorder:
+            id: header_label
             text: root.header_label_text
             font_size: 20
             border_width: 2
@@ -13,14 +15,20 @@
             size_hint: 1, 1
             size: self.texture_size
             pos_hint: {'center_x':0.5, 'center_y':0.5}
+
     BoxLayout:
         size_hint: 1, 1
-        Button:
-            text: 'a'
+        VolumeLevel:
+            id: volume
+            pos: root.pos[0], root.pos[1] + root.ids["footer_label"].size[1]
+            color: root.volume_color
+            level: 1
+
     BoxLayout:
         size_hint: 1, .3
         LabelWithBorder:
-            text: root.floor_label_text
+            id: footer_label
+            text: root.footer_label_text
             font_size: 20
             border_width: 2
             border_color: [1,1,1,1]
